# com.unity.webrtc

./: .gitattributes  .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  Third Party Notices.md  ValidationExceptions.json  package.json  xray-exemptions.json
Plugin~/: .clang-format  .cmake-format  CMakeLists.txt  CMakePresets.json  README.md  README_EN.md  UnityRenderStreamingPlugin.sln  WebRTCPlugin.sln  packages.config
Plugin~/Cuda/Bicubic/: BicubicTexture.cpp  BicubicTexture.h  CMakeLists.txt  bicubicTexture_cuda.cu
Plugin~/NvCodec/: CMakeLists.txt  README.txt
Plugin~/NvCodec/NvCodec/NvDecoder/: NvDecoder.cpp  NvDecoder.h
Plugin~/NvCodec/NvCodec/NvEncoder/: NvEncoder.cpp  NvEncoder.h  NvEncoderCuda.cpp  NvEncoderCuda.h
Plugin~/NvCodec/Utils/: BitDepth.cu  ColorSpace.cu  ColorSpace.h  FFmpegDemuxer.h  FFmpegStreamer.h  Logger.h  NvCodecUtils.h  NvEncoderCLIOptions.h  Resize.cu  ResizeSurf.cu  ResizeSurf.h  crc.cu
Plugin~/NvCodec/implib/: CMakeLists.txt  libcuda.so.init.c
Plugin~/NvCodec/include/: cuviddec.h  nvEncodeAPI.h  nvcuvid.h
Plugin~/NvCodec/lib/Win32/: nvcuvid.lib  nvencodeapi.lib
Plugin~/NvCodec/lib/x64/: nvcuvid.lib  nvencodeapi.lib
Plugin~/WebRTCPlugin/: AudioTrackSinkAdapter.cpp  AudioTrackSinkAdapter.h  CMakeLists.txt  Callback.cpp  Context.cpp  Context.h  CreateSessionDescriptionObserver.cpp  CreateSessionDescriptionObserver.h  DataChannelObject.cpp  DataChannelObject.h  Debug.cpp  Debug.h  DummyAudioDevice.cpp  DummyAudioDevice.h  DummyVideoEncoder.cpp  DummyVideoEncoder.h  EncodedStreamTransformer.cpp  EncodedStreamTransformer.h  GpuMemoryBuffer.cpp  GpuMemoryBuffer.h  GpuMemoryBufferPool.cpp  GpuMemoryBufferPool.h  Jni.cpp  Logger.cpp  MediaStreamObserver.cpp  MediaStreamObserver.h  NativeFrameBuffer.cpp  NativeFrameBuffer.h  NvEncoder.cpp  NvEncoder.h  NvVideoCapturer.cpp  NvVideoCapturer.h  PeerConnectionObject.cpp  PeerConnectionObject.h  PeerConnectionStatsCollectorCallback.cpp  PeerConnectionStatsCollectorCallback.h  PlatformBase.h  ProfilerMarkerFactory.cpp  ProfilerMarkerFactory.h  RegisterPlugin.cpp  (+62 more)
Plugin~/WebRTCPlugin/Android/: AndroidCodecFactoryHelper.cpp  AndroidCodecFactoryHelper.h  CMakeLists.txt  Jni.cpp  Jni.h
Plugin~/WebRTCPlugin/Codec/: CMakeLists.txt  CreateVideoCodecFactory.cpp  CreateVideoCodecFactory.h  EncoderFactory.cpp  EncoderFactory.h  H264ProfileLevelId.cpp  H264ProfileLevelId.h  IEncoder.h  SimulcastEncoderFactory.cpp  SimulcastEncoderFactory.h  VideoCodecImpl.h
Plugin~/WebRTCPlugin/Codec/AndroidCodec/: CMakeLists.txt  android_codec_factory_helper.cc  android_codec_factory_helper.h
Plugin~/WebRTCPlugin/Codec/MediaCodec/: CMakeLists.txt  MediaCodec.cpp  MediaCodec.h  MediaCodecDecoderImpl.cpp  MediaCodecDecoderImpl.h  MediaCodecEncoderImpl.cpp  MediaCodecEncoderImpl.h
Plugin~/WebRTCPlugin/Codec/NvCodec/: CMakeLists.txt  NvCodec.cpp  NvCodec.h  NvDecoderImpl.cpp  NvDecoderImpl.h  NvEncoder.cpp  NvEncoder.h  NvEncoderCuda.cpp  NvEncoderCuda.h  NvEncoderCudaWithCUarray.cpp  NvEncoderCudaWithCUarray.h  NvEncoderD3D11.cpp  NvEncoderD3D11.h  NvEncoderD3D12.cpp  NvEncoderD3D12.h  NvEncoderGL.cpp  NvEncoderGL.h  NvEncoderImpl.cpp  NvEncoderImpl.h
Plugin~/WebRTCPlugin/Codec/SoftwareCodec/: CMakeLists.txt  SoftwareEncoder.cpp  SoftwareEncoder.h
Plugin~/WebRTCPlugin/Codec/VideoToolbox/: VTEncoderMetal.h  VTEncoderMetal.mm
Plugin~/WebRTCPlugin/Codec/VideoToolboxCodec/: CMakeLists.txt  (+2 more)
Plugin~/WebRTCPlugin/Dynlink/: CMakeLists.txt  libcuda.so.init.c
Plugin~/WebRTCPlugin/GraphicsDevice/: CMakeLists.txt  D3D11Texture2D.cpp  D3D11Texture2D.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsDeviceType.h  GraphicsUtility.cpp  GraphicsUtility.h  IGraphicsDevice.cpp  IGraphicsDevice.h  ITexture2D.cpp  ITexture2D.h  ScopedGraphicsDeviceLock.cpp  ScopedGraphicsDeviceLock.h
Plugin~/WebRTCPluginTest/: CMakeLists.txt  ContextTest.cpp  CreateVideoCodecFactoryTest.cpp  D3D11GraphicsDeviceTest.cpp  D3D11GraphicsDeviceTestBase.cpp  D3D11GraphicsDeviceTestBase.h  FrameGenerator.cpp  FrameGenerator.h  GpuMemoryBufferPoolTest.cpp  GpuMemoryBufferTest.cpp  GraphicsDeviceContainer.cpp  GraphicsDeviceContainer.h  GraphicsDeviceContainerTest.cpp  GraphicsDeviceTest.cpp  GraphicsDeviceTestBase.cpp  GraphicsDeviceTestBase.h  H264ProfileLevelIdTest.cpp  InternalCodecsTest.cpp  MetalDevice.mm  NativeFrameBufferTest.cpp  NvEncoderD3D11Test.cpp  NvEncoderTest.cpp  OpenGLContextTest.cpp  Sanitizer.cpp  UnityVideoDecoderFactoryTest.cpp  UnityVideoEncoderFactoryTest.cpp  VideoCapturerTest.cpp  VideoCodecTest.cpp  VideoCodecTest.h  VideoFrameBufferPoolTest.cpp  VideoFrameSchedulerTest.cpp  VideoFrameTest.cpp  VideoRendererTest.cpp  VideoTrackSourceTest.cpp  WebRTCPluginTest.vcxproj  WebRTCPluginTest.vcxproj.filters  packages.config  pch.h  test.cpp
Plugin~/WebRTCPluginTest/DummyUnityInterface/: DummyUnityGraphicsMetal.h
Plugin~/WebRTCPluginTest/MediaCodec/: CMakeLists.txt  MediaCodecEncoderImplTest.cpp  MediaCodecTest.cpp
Plugin~/WebRTCPluginTest/NvCodec/: CMakeLists.txt  CudaDeviceTest.cpp  FrameGenerator.cpp  NvCodecTest.cpp  NvDecoderImplTest.cpp  NvEncoderImplTest.cpp  NvEncoderTest.cpp
Plugin~/cmake/: AddPlugin.cmake  FindFramework.cmake  FindGLEW2.1.cmake  FindGMock.cmake  FindLibCXX.cmake  FindWebRTC.cmake
Plugin~/dynlink/: libcuda.so.1.init.c  libcuda.so.1.tramp.S  libcuda.so.tramp.S  libnvcuvid.so.1.init.c  libnvcuvid.so.1.tramp.S  libnvcuvid.so.init.c  libnvcuvid.so.tramp.S  libnvidia-encode.so.1.init.c  libnvidia-encode.so.1.tramp.S  libnvidia-encode.so.init.c  libnvidia-encode.so.tramp.S
Plugin~/gl3w/: readme.txt
Plugin~/glad/: README.md
Plugin~/libcxx/: README  debug.cpp
Plugin~/tools/android/: jni_symbols.txt
Plugin~/tools/sanitizer/: lsan_suppressions.txt
Plugin~/unity/include/: IUnityEventQueue.h  IUnityGraphics.h  IUnityGraphicsD3D11.h  IUnityGraphicsD3D12.h  IUnityGraphicsMetal.h  IUnityGraphicsVulkan.h  IUnityLog.h  IUnityMemoryManager.h  IUnityProfiler.h  IUnityProfilerCallbacks.h  IUnityRenderingExtensions.h  IUnityShaderCompilerAccess.h  IUnityXRTime.h  LICENSE.md
(+409 files in other folders)
